fixed bug that would cause product image to overlap with reviews on smaller screens

--- a/app/assets/stylesheets/api/product_show.css
+++ b/app/assets/stylesheets/api/product_show.css
@@ -9,6 +9,7 @@
     flex: 1 1 66%;
     height: 50vw;
     max-height: 80vh;
+    margin-bottom: 0.5rem;
     /* border: 1px solid rgb(85, 236, 85); */
 
     overflow: hidden;
